--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,29 @@
 version: 2
 
 jobs:
-  build:
+  misspell:
     docker:
       - image: circleci/golang:1.12
     steps:
       - checkout
       - run:
-          name: Verify
+          name: Misspell check
           command: make precommit
+  markdownlint:
+    docker:
+      - image: node
+    steps:
+      - checkout
+      - run:
+          name: Install markdownlint-cli.
+          command: npm install -g markdownlint-cli
+      - run:
+          name: Check markdownlint
+          command: markdownlint .
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - misspell
+      - markdownlint
