--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -16,13 +16,13 @@
 *   @specs-approvers
 
 # Trace owners (global + trace)
-experimental/trace/    @specs-approvers @specs-trace-approvers
-specification/trace/   @specs-approvers @specs-trace-approvers
+experimental/trace/     @open-telemetry/specs-approvers @open-telemetry/specs-trace-approvers
+specification/trace/    @open-telemetry/specs-approvers @open-telemetry/specs-trace-approvers
 
 # Metrics owners (global + metrics)
-experimental/metrics/    @specs-approvers @specs-metrics-approvers
-specification/metrics/   @specs-approvers @specs-metrics-approvers
+experimental/metrics/   @open-telemetry/specs-approvers @open-telemetry/specs-metrics-approvers
+specification/metrics/  @open-telemetry/specs-approvers @open-telemetry/specs-metrics-approvers
 
 # Logs owners (global + logs)
-experimental/logs/    @specs-approvers @specs-logs-approvers
-specification/logs/   @specs-approvers @specs-logs-approvers
+experimental/logs/      @open-telemetry/specs-approvers @open-telemetry/specs-logs-approvers
+specification/logs/     @open-telemetry/specs-approvers @open-telemetry/specs-logs-approvers
