--- a/.github/workflows/state-pr.yaml
+++ b/.github/workflows/state-pr.yaml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/stale@v3
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-pr-message: 'This PR was marked stale due to lack of inactivity. It will be closed in 7 days'
+        stale-pr-message: 'This PR was marked stale due to lack of activity. It will be closed in 7 days'
         close-pr-message: 'Closed as inactive'
         days-before-stale: 14
         days-before-close: 7
