--- a/.github/workflows/state-pr.yaml
+++ b/.github/workflows/state-pr.yaml
@@ -11,7 +11,7 @@ jobs:
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         stale-pr-message: 'This PR was marked stale due to lack of activity. It will be closed in 7 days'
-        close-pr-message: 'Closed as inactive'
+        close-pr-message: 'Closed as inactive. Feel free to reopen if this PR is still being worked on.'
         days-before-stale: 14
         days-before-close: 7
         debug-only: true
