--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,16 +13,16 @@
 #
 
 # Global owners, will be the owners for everything in the repo. Membership is tracked via https://github.com/open-telemetry/community/blob/master/community-members.md 
-*   @open-telemetry/specs-approvers
+*   @open-telemetry/technical-committee @open-telemetry/specs-approvers
 
 # Trace owners (global + trace)
-experimental/trace/     @open-telemetry/specs-approvers @open-telemetry/specs-trace-approvers
-specification/trace/    @open-telemetry/specs-approvers @open-telemetry/specs-trace-approvers
+experimental/trace/     @open-telemetry/technical-committee @open-telemetry/specs-approvers @open-telemetry/specs-trace-approvers
+specification/trace/    @open-telemetry/technical-committee @open-telemetry/specs-approvers @open-telemetry/specs-trace-approvers
 
 # Metrics owners (global + metrics)
-experimental/metrics/   @open-telemetry/specs-approvers @open-telemetry/specs-metrics-approvers
-specification/metrics/  @open-telemetry/specs-approvers @open-telemetry/specs-metrics-approvers
+experimental/metrics/   @open-telemetry/technical-committee @open-telemetry/specs-approvers @open-telemetry/specs-metrics-approvers
+specification/metrics/  @open-telemetry/technical-committee @open-telemetry/specs-approvers @open-telemetry/specs-metrics-approvers
 
 # Logs owners (global + logs)
-experimental/logs/      @open-telemetry/specs-approvers @open-telemetry/specs-logs-approvers
-specification/logs/     @open-telemetry/specs-approvers @open-telemetry/specs-logs-approvers
+experimental/logs/      @open-telemetry/technical-committee @open-telemetry/specs-approvers @open-telemetry/specs-logs-approvers
+specification/logs/     @open-telemetry/technical-committee @open-telemetry/specs-approvers @open-telemetry/specs-logs-approvers
