--- a/yaml/trace/http.yaml
+++ b/yaml/trace/http.yaml
@@ -9,7 +9,6 @@ groups:
       - id: method
         type: string
         required: always
-        sampling_relevant: false
         brief: 'HTTP request method.'
         examples: ["GET", "POST", "HEAD"]
       - id: url
@@ -119,12 +118,11 @@ groups:
     attributes:
       - id: server_name
         type: string
-        sampling_relevant: false
         brief: >
             The primary server name of the matched virtual host. This should be obtained via configuration.
             If no such configuration can be obtained, this attribute MUST NOT be set ( `net.host.name` should be used instead).
         note: >
-            http.url is usually not readily available on the server side but would have to be assembled in a cumbersome and
+            `http.url` is usually not readily available on the server side but would have to be assembled in a cumbersome and
             sometimes lossy process from other information (see e.g. open-telemetry/opentelemetry-python/pull/148).
             It is thus preferred to supply the raw data that is available.
         examples: ['example.com']
@@ -135,7 +133,6 @@ groups:
         examples: '/users/:userID?'
       - id: client_ip
         type: string
-        sampling_relevant: false
         brief: >
             The IP address of the original client behind all proxies, if
             known (e.g. from [X-Forwarded-For](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-Forwarded-For)).
