Fix github action to auto assign
Signed-off-by: Bogdan Drutu <bogdandrutu@gmail.com>

--- a/.github/workflows/auto-assign-tc-members.yml
+++ b/.github/workflows/auto-assign-tc-members.yml
@@ -1,7 +1,5 @@
 name: 'Auto Assign'
-on:
-  pull_request:
-    types: [assigned, opened, synchronize, reopened]
+on: pull_request_target
 
 jobs:
   add-owner:
