--- a/semantic_conventions/trace/exception.yaml
+++ b/semantic_conventions/trace/exception.yaml
@@ -25,6 +25,14 @@ groups:
         at com.example.GenerateTrace.methodB(GenerateTrace.java:13)\n
         at com.example.GenerateTrace.methodA(GenerateTrace.java:9)\n
         at com.example.GenerateTrace.main(GenerateTrace.java:5)'
+      - id: exception.escaped
+        type: boolean
+        brief: >
+          SHOULD be set to true if the exception event is recorded at a point where
+          it is known that the exception is escaping the scope of the span (e.g. if
+          there is an exception active just before ending the span). Note that an
+          exception may still leave the scope of the span even if this was not set
+          or set to false, if the event was recorded at an earlier time.
     constraints:
       - any_of:
         - "exception.type"
