- Update messaging.yaml to align with document - Minor update to wording of Apacha Kafka service and peer names for Producers and Consumers

--- a/semantic_conventions/trace/messaging.yaml
+++ b/semantic_conventions/trace/messaging.yaml
@@ -68,9 +68,13 @@ groups:
           brief: 'The compressed size of the message payload in bytes.'
           examples: 2048
       constraints:
-        - any_of:
-          - 'net.peer.name'
-          - 'net.peer.ip'
+        - ref: net.peer.name
+          required:
+            conditional: If available.
+        - ref: net.peer.ip
+          tag: connection-level
+          required:
+            conditional: If available.
         - include: network
 
     - id: messaging.producer
@@ -114,3 +118,35 @@ groups:
       brief: >
         Semantic convention for servers that consume messages received from messaging systems
         and always send back replies directed to the producers of these messages.
+
+    - id: messaging.kafka
+      prefix: messaging.kafka
+      extends: messaging
+      brief: >
+        Attributes for Apache Kafka
+      attributes:
+        - id: message_key
+          type: string
+          brief: >
+            Message keys in Kafka are used for grouping alike messages to ensure they're processed on the same partition.
+            They differ from `messaging.message_id` in that they're not unique.
+            If the key is `null`, the attribute MUST NOT be set.
+          note: >
+            If the key type is not string, it's string representation has to be supplied for the attribute.
+          examples: 'myKey'
+        - id: consumer_group
+          type: string
+          brief: >
+            Name of the Kafka Consumer Group that is handling the message.
+            Only applies to consumers, not producers.
+          examples: 'my-group'
+        - id: client_id
+          type: string
+          brief: >
+            Client Id for the Consumer or Producer that is handling the message.
+          examples: '5'
+        - id: partition
+          type: string
+          brief: >
+            Partition the message is sent to.
+          examples: '2'
