--- a/semantic_conventions/resource/faas.yaml
+++ b/semantic_conventions/resource/faas.yaml
@@ -14,7 +14,7 @@ groups:
         type: string
         required: always
         brief: >
-          The unique name of the function being executed.
+          The unique ID of the function being executed.
         note: >
           For example, in AWS Lambda this field corresponds to the
           [ARN](https://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html)
