--- a/semantic_conventions/resource/host.yaml
+++ b/semantic_conventions/resource/host.yaml
@@ -7,7 +7,7 @@ groups:
       - id: id
         type: string
         brief: >
-          Unique host id. For Cloud, this must be the instance_id assigned by the cloud provider.
+          Unique host ID. For Cloud, this must be the instance_id assigned by the cloud provider.
         examples: ['opentelemetry-test']
       - id: name
         type: string
@@ -29,7 +29,7 @@ groups:
       - id: image.id
         type: string
         brief: >
-          VM image id. For Cloud, this value is from the provider.
+          VM image ID. For Cloud, this value is from the provider.
         examples: ['ami-07b06b442921831e5']
       - id: image.version
         type: string
