--- a/semantic_conventions/trace/faas.yaml
+++ b/semantic_conventions/trace/faas.yaml
@@ -4,7 +4,7 @@ groups:
     brief: >
         This document defines how to describe an instance of a function that
         runs without provisioning or managing of servers (also known as
-        serverless) with spans.
+        serverless functions or Function as a Service (FaaS)) with spans.
     attributes:
       - id: trigger
         required:
