Use references for metrics-messaging labels.

--- a/semantic_conventions/metrics/messaging.yaml
+++ b/semantic_conventions/metrics/messaging.yaml
@@ -1,66 +1,21 @@
 groups:
-    - id: messaging
+    - id: metrics-messaging
       prefix: messaging
       brief: >
-          This document defines the lables used in
-          messaging systems.
+          This document defines the attributes used in
+          messaging system metrics.
       attributes:
-        - id: system
-          type: string
+        - ref: messaging.system
           required: always
-          brief: 'A string identifying the messaging system.'
-          examples: ['kafka', 'rabbitmq', 'activemq']
-        - id: destination
-          type: string
+        - ref: messaging.destination
           required: always
-          brief: >
-            The message destination name.
-          examples: ['MyQueue', 'MyTopic']
-        - id: destination_kind
-          type:
-            allow_custom_values: false
-            members:
-              - id: queue
-                value: "queue"
-                brief: "A message sent to a queue"
-              - id: topic
-                value: "topic"
-                brief: "A message broadcast to the subscribers of the topic"
-          required:
-            conditional: 'Required only if the message destination is either a `queue` or `topic`.'
-          brief: 'The kind of message destination'
-        - id: temp_destination
-          type: boolean
-          required:
-            conditional: 'If missing, it is assumed to be false.'
-          brief: 'A boolean that is true if the message destination is temporary.'
-        - id: protocol
-          type: string
-          brief: 'The name of the transport protocol.'
-          examples: ['AMQP', 'MQTT']
-        - id: protocol_version
-          type: string
-          brief: 'The version of the transport protocol.'
-          examples: '0.9.1'
-        - id: url
-          type: string
-          brief: 'Connection string.'
-          examples: ['tibjmsnaming://localhost:7222', 'https://queue.amazonaws.com/80398EXAMPLE/MyQueue']
+        - ref: messaging.destination_kind
+          required: always
+        - ref: messaging.temp_destination
+        - ref: messaging.protocol
+        - ref: messaging.protocol_version
+        - ref: messaging.url
         - ref: net.peer.name
-          note: >
-            This should be the IP/hostname of the broker (or other network-level peer) this specific message is sent to/received from.
-          required:
-            conditional: If available.
         - ref: net.peer.ip
-          tag: connection-level
-          required:
-            conditional: If available.
         - ref: net.peer.port
-          tag: connection-level
-          required:
-            conditional: If available.
         - ref: net.transport
-          tag: connection-level
-          brief: 'Transport protocol used.'
-          required:
-            conditional: If available.
