--- a/semantic_conventions/trace/messaging.yaml
+++ b/semantic_conventions/trace/messaging.yaml
@@ -26,7 +26,7 @@ groups:
                 brief: "A message sent to a queue"
               - id: topic
                 value: "topic"
-                brief: "A message broadcasted to the subscribers of the topic"
+                brief: "A message sent to a topic"
           required:
             conditional: 'Required only if the message destination is either a `queue` or `topic`.'
           brief: 'The kind of message destination'
