Add "tombstone" to Kafka section as instrumentation currently uses it

--- a/semantic_conventions/trace/messaging.yaml
+++ b/semantic_conventions/trace/messaging.yaml
@@ -153,3 +153,8 @@ groups:
           brief: >
             Partition the message is sent to.
           examples: 2
+        - id: tombstone
+          type: boolean
+          required:
+            conditional: 'If missing, it is assumed to be false.'
+          brief: 'A boolean that is true if the message is a tombstone.'
