--- a/semantic_conventions/trace/faas.yaml
+++ b/semantic_conventions/trace/faas.yaml
@@ -2,7 +2,7 @@ groups:
   - id: faas_span
     prefix: faas
     brief: >
-        This document defines how to describe an instance of a function that
+        This defines how to describe an instance of a function that
         runs without provisioning or managing of servers (also known as
         serverless functions or Function as a Service (FaaS)) with spans.
     attributes:
