--- a/.github/workflows/auto-assign-tc-members.yml
+++ b/.github/workflows/auto-assign-tc-members.yml
@@ -1,7 +1,7 @@
 name: 'Auto Assign'
 on: 
   pull_request_target:
-    types: [opened]
+    types: [opened, ready_for_review]
 
 jobs:
   add-owner:
