--- a/semantic_conventions/trace/rpc.yaml
+++ b/semantic_conventions/trace/rpc.yaml
@@ -33,3 +33,14 @@ groups:
           - net.peer.ip
           - net.peer.name
         - include: network
+    - id: rpc.grpc
+      prefix: rpc.grpc
+      extends: rpc
+      brief: 'Call-level attributes for gRPC'
+      attributes:
+        - id: status_code
+          type: number
+          required: always
+          tag: call-level-tech-specific
+          brief: "the status code number of the gRPC request."
+          examples: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
