Specify that db.sql.table MUST NOT be set when not applicable
Co-authored-by: Armin Ruech <armin.ruech@dynatrace.com>

--- a/semantic_conventions/trace/database.yaml
+++ b/semantic_conventions/trace/database.yaml
@@ -314,7 +314,7 @@ groups:
             `db.statement` just to get this property, but it should be set if
             it is provided by the library being instrumented.
             If the operation is acting upon an anonymous table, or more than one table, this
-            value may be omitted.
+            value MUST NOT be set.
           examples: ['public.users', 'customers']
 
 
