Work around semantic conventions.

--- a/semantic_conventions/resource/faas.yaml
+++ b/semantic_conventions/resource/faas.yaml
@@ -26,7 +26,7 @@ groups:
         type: string
         brief: >
           The version string of the function being executed as defined in
-          [Version Attributes](https://github.com/open-telemetry/opentelemetry-specification/tree/master/specification/resource/semantic_conventions#version-attributes).
+          [Version Attributes](../../resource/semantic_conventions/README.md#version-attributes).
         examples: ['2.0.0']
       - id: instance
         type: string
