Apply suggestions from code review
Co-authored-by: Giovanni Liva <giovanni.liva@dynatrace.com>

--- a/semantic_conventions/metrics/faas.yaml
+++ b/semantic_conventions/metrics/faas.yaml
@@ -15,6 +15,6 @@ groups:
           required: always
         - ref: faas.coldstart
           required: always
-        - id: faas.error
+        - id: error
           type: boolean
           brief: 'Whether or not the function resulted in an error.'
