--- a/semantic_conventions/trace/database.yaml
+++ b/semantic_conventions/trace/database.yaml
@@ -258,11 +258,33 @@ groups:
             The page size of the query.
           examples: [5000]
         - id: consistency_level
-          type: string
           tag: call-level-tech-specific
           brief: >
-            The consistency level of the query.
-          examples: 'LOCAL_QUORUM'
+            The consistency level of the query. Based on consistency values from [cql](https://docs.datastax.com/en/cassandra-oss/3.0/cassandra/dml/dmlConfigConsistency.html).
+          type:
+            members:
+              - id: ALL
+                value: 'ALL'
+              - id: EACH_QUORUM
+                value: 'EACH_QUORUM'
+              - id: QUORUM
+                value: 'QUORUM'
+              - id: LOCAL_QUORUM
+                value: 'LOCAL_QUORUM'
+              - id: ONE
+                value: 'ONE'
+              - id: TWO
+                value: 'TWO'
+              - id: THREE
+                value: 'THREE'
+              - id: LOCAL_ONE
+                value: 'LOCAL_ONE'
+              - id: ANY
+                value: 'ANY'
+              - id: SERIAL
+                value: 'SERIAL'
+              - id: LOCAL_SERIAL
+                value: 'LOCAL_SERIAL'
         - id: table
           type: string
           tag: call-level-tech-specific
